--- a/bar_chart/index.html
+++ b/bar_chart/index.html
@@ -4,5 +4,6 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 </head>
 <body>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="tooltip.js"></script>
+    <script type="text/javascript" src="root.js"></script>
 </body>
